fix icon sizes and alignment

--- a/frontend/src/components/FairbundledHeader/FairbundledHeader.less
+++ b/frontend/src/components/FairbundledHeader/FairbundledHeader.less
@@ -10,3 +10,7 @@
     max-width: 100%;
     width: 210px;
 }
+
+.header__icon-menu{
+    width: 100%;
+}
